No more casts in main CPAPlus algorithm
- We now explicitly deal with AbstractElementWithLocation, which removes any
  requirement on the underlying CPA being the CompositeCPA
- Got rid of _all_ casts in CPAPlusAlgorithm.java
- BTW: choose had 46 lines, it's 20 lines now.

git-svn-id: https://svn.sosy-lab.org/software/cpachecker/branches/abstractelementwithlocation-cleanup@211 4712c6d2-40bb-43ae-aa4b-fec3f1bdfe4c